# videochain-python

./: .antigravityignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART_GUIDE.md  README.md  RESEARCH_COMPARISON.md  SECURITY.md  TECHNICAL_SPECIFICATIONS.md  audit_report_20260418_204326.md  diagnostic_gpu.py  knowledge_base.json  pyproject.toml  requirements.txt  test_keyframing.py  test_vlm.py
.github/ISSUE_TEMPLATE/: bug_report.md
embedded_demo/: README.md  forensic_monitor.py
examples/: build_knowledge_base.py  multi_video_search.py  test_audio.py  test_nodes.py  test_nvml_init.py  test_telemetry.py  test_vision.py  test_vlm.py
models/: classes.txt
notebooks/: 01_data_exploration.ipynb
report/: main.tex  report.bib
report/chapters/: 1_Introduction.tex  2_Literature_Survey.tex  3_Requirement.tex  4_System_Design.tex  5_Implementation.tex  6_Results.tex  7_Conclusion.tex  Class_Diagram.puml  DFD-1.puml  Detailed_Architecture.puml  ER_Diagram.puml  Use_Case.puml
scratch/: real_world_test.json  verify_v0_8_3.py
scripts/: benchmark_sample.py  check_gpu.py  download_datasets.py  sample_data.py  test_api_integration.py  test_cross_video_graph.py  test_graph_logic.py  test_isolation.py  test_rag.py  test_vision.py  train_vision.py
ui/: app.py
vidchain/: __init__.py  cli.py  client.py  pipeline.py  processor.py  rag.py  schema.py  serve.py  telemetry.py  vision.py
vidchain-web/: package-lock.json  package.json
vidchain-web/app/: globals.css  layout.tsx  page.tsx  page_old.tsx  page_old_fixed.tsx
vidchain-web/app/components/: ChatCanvas.tsx  IngestBar.tsx  Sidebar.tsx  TelemetryPanel.tsx
vidchain/brain/: telemetry_diag.py
vidchain/core/: fusion.py  summarizer.py
vidchain/loaders/: audio_loader.py  video_loader.py
vidchain/nodes/: __init__.py  action.py  audio.py  base.py  emotion.py  keyframe.py  ocr.py  tracker.py  vision.py  vlm.py
vidchain/processors/: audio_model.py  emotion_model.py  ocr_model.py  scene_model.py  temporal_tracker.py  tracker.py  vision_model.py
vidchain/scripts/: check_gpu.py  train_vision.py
vidchain/ui/: desktop.py
vidchain/vectorstores/: chroma.py  graph.py
vidchain/web_dist/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt
vidchain/web_dist/_next/static/chunks/: 00rx6ih8xpmsr.js  01ke8nhpw~a2v.css  028ooz5echo3-.js  09o4poafcazb5.css  0aambqkm_e~9t.css  0bmpc66o4m-9z.js  0c1jty1ms-p-v.js  0llc2i0zud39t.js  0vb97400v44ox.js  0y~pal.9ediaq.js  0z7f~2n2izv_d.js  14kqkrbxgixn..js  16842lq2nd48n.css  turbopack-0wxp1y9sb8k_s.js
vidchain/web_dist/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.txt  __next._tree.txt
vidchain/web_dist/_not-found/__next._not-found/: __PAGE__.txt
vidchain_storage/: chroma.sqlite3
videochain/: __init__.py  cli.py  processor.py  rag.py  vision.py
videochain/core/: fusion.py  ollama_engine.py
videochain/loaders/: audio_loader.py  video_loader.py
videochain/processors/: audio_model.py  ocr_model.py  vision_model.py
