[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "VidChain"
version = "0.2.0"
description = "A Lightweight Video RAG Framework for Multimodal Reasoning"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Rahul Sharma", email = "rahulsharma.hps@gmail.com" }]
license = { text = "MIT" }
keywords = ["video-rag", "multimodal", "ai", "computer-vision", "whisper", "ollama", "yolo"]

# Detailed Classifiers for PyPI
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core Dependencies
dependencies = [
    "opencv-python",
    "scenedetect",
    "openai-whisper",       # Provides the 'whisper' import
    "sentence-transformers",
    "faiss-cpu",
    "litellm",              # Added for your 'gemini/gemini-2.5-flash' routing
    "google-generativeai",
    "moviepy",
    "pillow<12.0",          # 🛑 PINNED: Fixes the MoviePy incompatibility crash
    "torch",                # 🛑 UNPINNED: Allows users to install their own cu118/cu121 versions
    "torchvision",          # 🛑 UNPINNED: Prevents pip from forcing a CPU downgrade
    "torchaudio",           # Added to complete the PyTorch hardware triad
    "numpy",
    "tqdm",
    "python-dotenv",
    "ultralytics",          # YOLO-based Noun Engine
    "librosa",              # Audio energy extraction
    "easyocr",              # GPU-accelerated text extraction
]

# --- CONSOLIDATED CLI ENTRY POINTS ---
[project.scripts]
vidchain-analyze = "vidchain.cli:main"
vidchain-train = "scripts.train_vision:main"

[project.urls]
"Homepage" = "https://github.com/rahulsiiitm/videochain-python"
"Bug Tracker" = "https://github.com/rahulsiiitm/videochain-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vidchain*"]

[tool.setuptools.package-data]
vidchain = ["py.typed"]

# UV specific configuration for CUDA-enabled Torch
[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"