[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "VidChain"
version = "0.3.0"
description = "A Lightweight Video RAG Framework for Multimodal Reasoning"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Rahul Sharma", email = "rahulsharma.hps@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["video-rag", "multimodal", "ai", "computer-vision", "whisper", "ollama", "yolo"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ── Core Vision ──────────────────────────────────────────
    "opencv-python",
    "ultralytics",              # YOLO object detection
    "torch",                    # Unpinned: let users install CUDA variant
    "torchvision",
    "torchaudio",
    "pillow<12.0",              # Pinned: MoviePy incompatibility above 12

    # ── Audio ─────────────────────────────────────────────────
    "openai-whisper",           # Speech transcription
    "moviepy",                  # Video/audio I/O
    "imageio-ffmpeg",           # Bundled FFmpeg (no system install needed)
    "librosa",                  # Audio energy analysis
    "soundfile",                # Fast WAV loading (replaces audioread)

    # ── OCR ───────────────────────────────────────────────────
    "easyocr",                  # Scene text extraction

    # ── Emotion ───────────────────────────────────────────────
    "deepface",                 # Facial emotion analysis
    "tf-keras",                 # Required by deepface with TF 2.x

    # ── RAG & Vector Store ────────────────────────────────────
    "sentence-transformers",    # BGE embedder + CrossEncoder reranker
    "chromadb",                 # Persistent vector database
    "faiss-cpu",                # Fallback FAISS index

    # ── LLM Routing ───────────────────────────────────────────
    "litellm",                  # Unified LLM API (Gemini, Ollama, OpenAI)
    "google-generativeai",      # Gemini backend
    "python-dotenv",            # .env API key loading

    # ── Utilities ─────────────────────────────────────────────
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
# Install with: pip install vidchain[clip]
clip = [
    "transformers",             # CLIP scene understanding (optional enrichment)
]

[project.scripts]
vidchain-analyze = "vidchain.cli:main"
vidchain-train = "scripts.train_vision:main"

[project.urls]
"Homepage" = "https://github.com/rahulsiiitm/videochain-python"
"Bug Tracker" = "https://github.com/rahulsiiitm/videochain-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vidchain*"]

[tool.setuptools.package-data]
vidchain = ["py.typed"]

# UV: CUDA-accelerated PyTorch index
[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"